# gpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/2.1_function_template/: 1.md
src/2_the_basic_of_template/: CMakeLists.txt
src/2_the_basic_of_template/2.2_class_template/: 1.md
src/2_the_basic_of_template/2.3_friend_in_class_template/: 1.md
src/2_the_basic_of_template/2.4_variadic_template/: 1.md
src/2_the_basic_of_template/2.5_polymorphism_in_template/: 1.md
src/2_the_basic_of_template/2.6_special_derive_in_template/: 1.md
src/2_the_basic_of_template/2.7_template_in_project/: 1.md
src/3_the_improve_of_template/3.1_universal_reference/: 1.md
src/3_the_improve_of_template/3.2_type_inference/: 1.md
src/3_the_improve_of_template/3.3_perfect_forwarding/: 1.md
src/3_the_improve_of_template/3.4_std::enable_if/: 1.md
src/3_the_improve_of_template/3.5_class_template_multi_args_expand/: 1.md
src/4_the_typical_content_of_standard_library/4.1_std::declval/: 1.md
src/4_the_typical_content_of_standard_library/4.2_std::true_or_false_type/: 1.md
src/5_trait_and_policy/5.1_trait_technique/: 1.md
src/normal_cpp/1_分支预测/: 1.md  a.cpp  b.cpp
src/normal_cpp/2_以函数为执行入口/: 1.md  a.c  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
